# backend-cube-habits

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  populate_inits.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
alembic/: env.py
alembic/versions/: f310736fbe03_tables.py
api/: dependencies.py  main.py
api/routes/: user_router.py
api/schemas/: __init__.py  habit_log_schemas.py  habit_schemas.py  user_schemas.py
core/: security.py
core/domain/entities/: __init__.py  habit.py  habit_log.py  user.py
core/domain/repositories/: __init__.py  i_habit_log_repository.py  i_habit_repository.py  i_user_repository.py
core/domain/use-cases/: __init__.py  create_habit.py  delete_habit.py  find_habits.py  findall_logs.py  login_user.py
core/domain/use_cases/: __init__.py  find_user_by_email.py  register_log.py  register_user.py  update_habit.py
core/domain/value_objects/: __init__.py  description.py  email.py  password.py  username.py
core/factories/: __init__.py  use_case_factory.py
core/infra/mocks/: __init__.py  mock_habit_log_repository.py  mock_habit_repository.py  mock_user_repository.py
core/infra/orm/: __init__.py  habits_logs.py  user.py  user_habits.py
core/infra/sqlalchemy/: __init__.py  habitlogs_repository.py  habits_repository.py  user_repository.py
tests/core/domain/entities/: test_habit.py  test_habit_log.py  test_user.py
tests/core/domain/value_objects/: test_description.py  test_email.py  test_password.py  test_username.py
tests/core/factories/: test_use_case_factory.py
tests/core/infra/mocks/: test_mock_habit_log_repository.py  test_mock_habit_repository.py  test_mock_user_repository.py
