[project]
name = "habits-collection-api"
version = "0.1.0"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["domain*"]
exclude = ["tests*"]

# --- Configuração do Ruff Corrigida ---

[tool.ruff]
# Configurações globais (como o tamanho da linha)
line-length = 88
# 'fix = true' pertence a esta seção principal
fix = true

# Configuração do Formatador
[tool.ruff.format]
quote-style = "double"

# Configuração do Linter
[tool.ruff.lint]
# 'select' foi movido corretamente para cá
select = ["E", "W", "F", "I"]

# Ignora regras específicas por arquivo
[tool.ruff.lint.per-file-ignores]
# Isso ainda resolve todos os erros F401 nos inits
"__init__.py" = ["F401"]